--- a/02_딥 러닝 for NLP/02_전이학습/01_전이학습이란?.md
+++ b/02_딥 러닝 for NLP/02_전이학습/01_전이학습이란?.md
@@ -54,7 +54,7 @@
 >       - 이 경우는 Convolutional Base를 그대로 두어 특징을 추출하는 메커니즘을 그대로 사용하고 Classifier만 재학습하는 경우를 말한다.
 >       - 이 방법은 내가 가지고 있는 컴퓨터의 연산 능력이 부족하거나, 내가 현재 보유하고있는 데이터의 수가 적을 때, 마지막으로 내가 풀고자하는 문제가 사전학습된 모델이 풀고자하는 문제와 매우 유사할때 사용할 수 있는 방법이다. 
 >   - 위 세가지 전략(**전략1**, **전략2**, **전략3**) 경우를 그림으로 그리면 다음과 같다.
->   ![03_transform](https://user-images.githubusercontent.com/54063179/110432027-f4f36e80-80f1-11eb-94c5-50634128f468.png)
+>       > ![03_transform](https://user-images.githubusercontent.com/54063179/110432027-f4f36e80-80f1-11eb-94c5-50634128f468.png)
 >   - **전략3**의 경우는 비교적 간단히 사전모델을 불러와 사용할 수 있지만, **전략1**과 **전략2**의 경우는 불러온 사전모델을 학습시키는 과정이 있기에 **learning rate**에 대하여 조심하여야 한다. 
 >   - **learning rate**란? 신경망에서 파라메터들을 얼마나 학습시킬지 결정하는 하이퍼 파라미터이다.
 >   - **CNN베이스**의 사전학습 모델을 사용할 때는 이전에 학습한 내용을 모두 잊어버릴 위험성이 있기 때문에 적은 **learning rate**를 사용하는 것이 바람직하다.
