--- a/02_딥 러닝 for NLP/02_전이학습/01_전이학습이란?.md
+++ b/02_딥 러닝 for NLP/02_전이학습/01_전이학습이란?.md
@@ -3,7 +3,7 @@
 > - 전이학습 부분을 인터넷을 참고하여 개인적으로 공부함
 > - 출처 : https://jeinalog.tistory.com/13
 
-# 전이학습(Transfer Learning)
+# CNN & 전이학습(Transfer Learning)
 > - 밑바닥부터 모델을 만드는 것이 아니라 사전에 학습되어 있는 모델을 불러와 새로운 데이터를 학습시키는 방법
 > - 내가 풀고자하는 문제와 비슷한 주제의 데이터와 비슷하면서도 사이즈가 큰 데이터로 미리 학습되어 있는 모델을 불러쓰는 것과 같다.
 > - 좋은 성능의 모델을 사용하기 위해서는 많은 데이터로 학습해야 하고 그렇다면 많은 시간이 소요되는데, 이때 전이학습은 이러한 많은 시간을 아낄 수 있는 매우 좋은 방법이다.
@@ -26,9 +26,11 @@
 >   - **(2) Classifier**
 >       - 주로 완전 연결 층 (Full Connected Layer)로 이루어져 있다.
 >       - 완전 연결 층이란 `모든 계층의 뉴런이 이전 층의 출력노드와 하나도 빠짐없이 모두 연결되어 있는 층`을 뜻한다. 아래 그림을 참고하면 모든 뉴런이 하나도 빠짐없이 연결되어 있음을 볼 수 있다.
+>           
 >           > ![Full_Connected_Layer](https://user-images.githubusercontent.com/54063179/110203467-cd15c800-7eb1-11eb-88e4-4aa525d67491.png)
 >       - Classifier의 목적은 **Convolutional Base에서 추출해낸 특징을 기반으로 학습하여 올바른 클래스 값을 반환하는 것이다.**
 >   - 아래 그림은 `(1) Convolutional Base`와 `(2) Classifier`를 가지는 CNN의 구조를 간소화 하여 그린 그림이다.
+>       
 >       > ![02_CNN](https://user-images.githubusercontent.com/54063179/110203754-3944fb80-7eb3-11eb-808d-5b7c0520b4da.png)
 
 
@@ -54,6 +56,7 @@
 >       - 이 경우는 Convolutional Base를 그대로 두어 특징을 추출하는 메커니즘을 그대로 사용하고 Classifier만 재학습하는 경우를 말한다.
 >       - 이 방법은 내가 가지고 있는 컴퓨터의 연산 능력이 부족하거나, 내가 현재 보유하고있는 데이터의 수가 적을 때, 마지막으로 내가 풀고자하는 문제가 사전학습된 모델이 풀고자하는 문제와 매우 유사할때 사용할 수 있는 방법이다. 
 >   - 위 세가지 전략(**전략1**, **전략2**, **전략3**) 경우를 그림으로 그리면 다음과 같다.
+>       
 >       > ![03_transform](https://user-images.githubusercontent.com/54063179/110432027-f4f36e80-80f1-11eb-94c5-50634128f468.png)
 >   - **전략3**의 경우는 비교적 간단히 사전모델을 불러와 사용할 수 있지만, **전략1**과 **전략2**의 경우는 불러온 사전모델을 학습시키는 과정이 있기에 **learning rate**에 대하여 조심하여야 한다. 
 >   - **learning rate**란? 신경망에서 파라메터들을 얼마나 학습시킬지 결정하는 하이퍼 파라미터이다.
@@ -116,4 +119,15 @@
 
 
 ## 4. Clssifier (분류기)
-> 
+> - 다시한번 설명하면, CNN신경망은 두가지 부분으로 나뉘어 진다.
+>   - `Convolution Base` : 이미지로부터 특징을 추출하는 부분
+>   - `Classifier` : 추출된 특징을 입력받아서 최종벅으로 이미지의 카테고리를 결정하는 부분
+> - 여기서는 `Classifier` 에 대하여 알아보자
+>   - **(1) Fully-connected layers**
+>     - 분류 문제에서 표준으로 쓰이는 방법으로, 하나의 **완전 연결 계층(Fully-connected layers)**을 쌓은 후 마지막에 **소프트맥스 활성화 함수 계층(Softmax Activated layer)** 을 놓는 것이다.
+>   - **(2) Global average pooling**
+>     - 조금 다른 관점으로는 평균 풀링 방법이 있다.
+>     - 이 방법은 `Lin et al. 2013` 논문에서 제안된 방법으로 Convolutional Base의 끝에서 바로 전에 설명한 Fully-connected layer 대신에 **평균 풀링 계층**  을 추가하고 그 결과값을 바로 **소프트맥스 계층**과 연결하는 방법이다.
+>     - 좀 더 자세히 알아보고 싶으면 `Lin et al.2013` 논문을 참조라하.
+>   - **(3) Linear support vector machines**
+>     - 선형 서포트 벡터머신은 또 다른 아이디어이다. `Tang(2013)` 의 논문에 따르면, Convolutional Base에서 추출된 특징을 선형 SVM 분류기로 분류함으로써 정확도를 더 높일 수 있다고 한다.
